--- a/ensemble_learning_&_Random_forests.ipynb
+++ b/ensemble_learning_&_Random_forests.ipynb
@@ -833,10 +833,47 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "rnd_clf = RandomForestClassifier(n_estimators=500, max_leaf_nodes=16, random_state=42)\n",
+    "rnd_clf.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred_rf = rnd_clf.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bag_clf = BaggingClassifier(\n",
+    "    DecisionTreeClassifier(max_features=\"sqrt\", max_leaf_nodes=16),\n",
+    "    n_estimators=500, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bag_clf.fit(X_train, y_train)\n",
+    "y_pred = bag_clf.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "np.sum(y_pred == y_pred_rf) / len(y_pred)   # ve"
+   ]
   }
  ],
  "metadata": {
