--- a/ensemble_learning_&_Random_forests.ipynb
+++ b/ensemble_learning_&_Random_forests.ipynb
@@ -1745,6 +1745,495 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train_val, X_test, y_train_val, y_test = train_test_split(mnist.data, mnist.target, test_size=10000, random_state=42)\n",
+    "X_train, X_val,  y_train, y_val = train_test_split(X_train_val, y_train_val, test_size=10000, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier, ExtraTreesClassifier\n",
+    "from sklearn.svm import LinearSVC\n",
+    "from sklearn.neural_network import MLPClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "random_forest_clf = RandomForestClassifier(n_estimators=100, random_state=42)\n",
+    "extra_trees_clf = ExtraTreesClassifier(n_estimators=100, random_state=42)\n",
+    "svm_clf = LinearSVC(max_iter=100, tol=20, random_state=42)\n",
+    "mlp_clf = MLPClassifier(random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training the RandomForestClassifier(random_state=42)\n",
+      "Training the ExtraTreesClassifier(random_state=42)\n",
+      "Training the LinearSVC(max_iter=100, random_state=42, tol=20)\n",
+      "Training the MLPClassifier(random_state=42)\n"
+     ]
+    }
+   ],
+   "source": [
+    "estimators = [random_forest_clf, extra_trees_clf, svm_clf, mlp_clf]\n",
+    "for estimator in estimators:\n",
+    "    print(\"Training the\", estimator)\n",
+    "    estimator.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.9692, 0.9715, 0.859, 0.9655]"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[estimator.score(X_val, y_val) for estimator in estimators]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import VotingClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "named_estimators = [\n",
+    "    (\"random_forest_clf\", random_forest_clf),\n",
+    "    (\"extra_trees_clf\", extra_trees_clf),\n",
+    "    (\"svm_clf\", svm_clf),\n",
+    "    (\"mlp_clf\", mlp_clf)\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "voting_clf = VotingClassifier(named_estimators)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "VotingClassifier(estimators=[('random_forest_clf',\n",
+       "                              RandomForestClassifier(random_state=42)),\n",
+       "                             ('extra_trees_clf',\n",
+       "                              ExtraTreesClassifier(random_state=42)),\n",
+       "                             ('svm_clf',\n",
+       "                              LinearSVC(max_iter=100, random_state=42, tol=20)),\n",
+       "                             ('mlp_clf', MLPClassifier(random_state=42))])"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "voting_clf.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9714"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "voting_clf.score(X_val, y_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.9692, 0.9715, 0.859, 0.9655]"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[estimator.score(X_val, y_val) for estimator in voting_clf.estimators_]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "VotingClassifier(estimators=[('random_forest_clf',\n",
+       "                              RandomForestClassifier(random_state=42)),\n",
+       "                             ('extra_trees_clf',\n",
+       "                              ExtraTreesClassifier(random_state=42)),\n",
+       "                             ('svm_clf', None),\n",
+       "                             ('mlp_clf', MLPClassifier(random_state=42))])"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "voting_clf.set_params(svm_clf=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('random_forest_clf', RandomForestClassifier(random_state=42)),\n",
+       " ('extra_trees_clf', ExtraTreesClassifier(random_state=42)),\n",
+       " ('svm_clf', None),\n",
+       " ('mlp_clf', MLPClassifier(random_state=42))]"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "voting_clf.estimators"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[RandomForestClassifier(random_state=42),\n",
+       " ExtraTreesClassifier(random_state=42),\n",
+       " LinearSVC(max_iter=100, random_state=42, tol=20),\n",
+       " MLPClassifier(random_state=42)]"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "voting_clf.estimators_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del voting_clf.estimators_[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9738"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "voting_clf.score(X_val, y_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "voting_clf.voting = \"soft\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9713"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "voting_clf.score(X_val, y_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9706"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "voting_clf.voting = \"hard\"\n",
+    "voting_clf.score(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.9645, 0.9691, 0.9624]"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[estimator.score(X_test, y_test) for estimator in voting_clf.estimators_]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 9. Stacking Ensemble"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_val_predictions = np.empty((len(X_val), len(estimators)), dtype=np.float32)\n",
+    "\n",
+    "for index, estimator in enumerate(estimators):\n",
+    "    X_val_predictions[:, index] = estimator.predict(X_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[5., 5., 5., 5.],\n",
+       "       [8., 8., 8., 8.],\n",
+       "       [2., 2., 3., 2.],\n",
+       "       ...,\n",
+       "       [7., 7., 7., 7.],\n",
+       "       [6., 6., 6., 6.],\n",
+       "       [7., 7., 7., 7.]], dtype=float32)"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_val_predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestClassifier(n_estimators=200, oob_score=True, random_state=42)"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rnd_forest_blender = RandomForestClassifier(n_estimators=200, oob_score=True, random_state=42)\n",
+    "rnd_forest_blender.fit(X_val_predictions, y_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9681"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rnd_forest_blender.oob_score_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_test_predictions = np.empty((len(X_test), len(estimators)), dtype=np.float32)\n",
+    "\n",
+    "for index, estimator in enumerate(estimators):\n",
+    "    X_test_predictions[:, index] = estimator.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = rnd_forest_blender.predict(X_test_predictions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import accuracy_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9682"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy_score(y_test, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
